--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_FormFields.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_FormFields.cshtml
@@ -1,4 +1,6 @@
 ﻿@using LiveMapDashboard.Web.Models.Poi
+@using LiveMap.Domain.Models
+
 @model LiveMapDashboard.Web.Models.Poi.PoiCrudformViewModel
 
 <div class="mt-2 p-4 relative z-10 bg-white border border-gray-200 rounded-xl sm:mt-4 md:p-10 dark:bg-neutral-900 dark:border-neutral-700">
@@ -20,6 +22,10 @@
 
         <select asp-for="Category" name="category"
                 class="border py-2.5 sm:py-2 px-2 block w-full border-gray-200 rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none">
+
+            <option value="@Category.EMPTY" selected="@(Model.Category.Equals(Category.EMPTY))">
+                -
+            </option>
 
             @foreach (var category in Model.Categories!)
             {
@@ -51,12 +57,10 @@
                    id="wheelchair"
                    class="peer sr-only" />
 
-            <span
-                class="absolute inset-0 bg-gray-200 rounded-full transition-colors duration-200 ease-in-out peer-checked:bg-blue-600 peer-disabled:opacity-50 peer-disabled:pointer-events-none">
-                            </span>
-            <span
-                class="absolute top-1/2 start-0.5 -translate-y-1/2 size-5 bg-white rounded-full shadow-xs transition-transform duration-200 ease-in-out peer-checked:translate-x-full">
-                            </span>
+            <span class="absolute inset-0 bg-gray-200 rounded-full transition-colors duration-200 ease-in-out peer-checked:bg-blue-600 peer-disabled:opacity-50 peer-disabled:pointer-events-none">
+            </span>
+            <span class="absolute top-1/2 start-0.5 -translate-y-1/2 size-5 bg-white rounded-full shadow-xs transition-transform duration-200 ease-in-out peer-checked:translate-x-full">
+            </span>
         </label>
         <label for="wheelchair" class="text-sm text-gray-700">Wheelchair accessible</label>
     </div>
