Add a map factory with built in search and basic controls for easier use (#70)
* feat: add mapfactory + map scripts and files cleanup

* fix: gitignore with styles.css

* Fix english translation in park boundaries

* fix: move map vars to files to avoid lazy loading in components

* fix: fix removal of markers on click

--- a/LiveMapDashboard.Web/Views/Poi/PoiForm.cshtml
+++ b/LiveMapDashboard.Web/Views/Poi/PoiForm.cshtml
@@ -4,5 +4,6 @@
 @await Component.InvokeAsync("PoiForm", Model)
 
 @section Scripts {
+    <script src="~/js/map/park-place-markers-maplibre.js" asp-append-version="true" type="module"></script>
     <partial name="_ValidationScriptsPartial" />
 }
