Added validation and fixed double-click

--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
@@ -42,6 +42,7 @@
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="Coordinate.Latitude" />
             <input type="hidden" asp-for="Coordinate.Longitude" />
+            <span asp-validation-for="Coordinate" class="text-red-500 mb-4"></span>
             <input type="hidden" asp-for="MapId" />
 
        
