--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_LocationButton.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_LocationButton.cshtml
@@ -2,7 +2,7 @@
     <div class="flex justify-between items-center">
         <div>
             <label class="text-sm font-medium text-gray-700 block mb-1 dark:text-gray-200">Locatie</label>
-            <p class="text-xs text-gray-500 dark:text-gray-400">*Dubbelklik op de kaart of zet handmatig</p>
+            <p class="text-xs text-gray-500 dark:text-gray-400">*Click on the map to add a location</p>
         </div>
         <button type="button"
                 class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-200"
