--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
@@ -34,7 +34,7 @@
 <div class="max-w-10xl px-4 pb-10 sm:px-6 lg:px-6 lg:pb-14 mx-auto">
     <div class="grid grid-cols-1 gap-6 md:grid-cols-2">
         @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_Map.cshtml")
-        
+
         <form method="post" asp-controller="poi" asp-action="submit">
             @Html.AntiForgeryToken()
             <div asp-validation-summary="ModelOnly" class="text-red-500 mb-4"></div>
@@ -42,17 +42,18 @@
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="Coordinate.Latitude" />
             <input type="hidden" asp-for="Coordinate.Longitude" />
+            <span asp-validation-for="Coordinate" class="text-red-500 mb-4"></span>
             <input type="hidden" asp-for="MapId" />
 
-       
-           
+
+
             <div>
                 @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_LocationButton.cshtml")
                 @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_FormFields.cshtml")
                 @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_OpeningHours.cshtml")
             </div>
-       
-        
+
+
             <div class="mt-2 py-4 relative z-10">
                 <div class="flex justify-end gap-3 w-full">
                     @if (!string.IsNullOrEmpty(Model.Id))
@@ -65,9 +66,9 @@
                     {
                         <a class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600" aria-haspopup="dialog" aria-expanded="false" aria-controls="go-back-alert" data-hs-overlay="#go-back-alert">
                             Cancel
-                        </a>   
+                        </a>
                     }
-                
+
                     <button type="submit"
                             class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
                         @(!string.IsNullOrEmpty(Model.Id) ? "Update" : "Create")
