--- a/LiveMapDashboard.Web/Views/RequestForChange/Index.cshtml
+++ b/LiveMapDashboard.Web/Views/RequestForChange/Index.cshtml
@@ -3,7 +3,7 @@
 @model RequestForChangeListViewModel
 
 <div class="max-w-10xl pt-2 px-4 sm:px-6 lg:px-6 lg:pt-2 mx-auto">
-    <h1 class="text-4xl dark:text-white">Wijzigingsverzoeken</h1>
+    <h1 class="text-4xl dark:text-white">Requests for change</h1>
     <br />
 
     <div class="flex flex-col">
@@ -49,11 +49,11 @@
                                         <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">
                                             @if (rfc.PoiId == null)
                                             {
-                                                <span>RFC for existing</span>
+                                                <span>RFC for new</span>
                                             }
                                             else
                                             {
-                                                <span>RFC for new</span>
+                                                <span>RFC for existing</span>
                                             }
                                         </td>
                                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-neutral-200">
