--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_FormFields.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/_FormFields.cshtml
@@ -49,6 +49,7 @@
         <span asp-validation-for="Image" class="text-sm text-red-600 mt-2"></span>
 
         <img id="previewImage" class="mt-2 w-full rounded-lg" />
+        <p id="imagePreviewError" class="text-sm text-yellow-800 mt-2">Image at URL does not exist.</p>
     </div>
 
     <div class="mb-2">
