--- a/LiveMapDashboard.Web/Views/Category/CategoryForm.cshtml
+++ b/LiveMapDashboard.Web/Views/Category/CategoryForm.cshtml
@@ -2,3 +2,7 @@
 
 <vc:category-form model="Model">
 </vc:category-form>
+
+@section Scripts {
+    <script src="~/js/category/icon-search.js" asp-append-version="true" type="module"></script>
+}
