Fixed singular field update

--- a/LiveMapDashboard.Web/Views/Shared/Components/CategoryForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/CategoryForm/Default.cshtml
@@ -74,7 +74,7 @@
                 <input type="text"
                        id="iconSearchInput"
                        class="border px-2 py-2 rounded w-full text-sm"
-                       placeholder="@placeholder" />
+                       value="@placeholder"/>
 
                 <input type="hidden"
                        asp-for="IconName"
