--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
@@ -63,28 +63,6 @@
     }
 }
 
-@section ViewDataMessages
-{
-    @if (ViewData["SuccessMessage"] != null || ViewData["ErrorMessage"] != null)
-    {
-        <div class="max-w-10xl px-4 pb-10 sm:px-6 lg:px-6 lg:pb-14 mx-auto">
-            @if (ViewData["SuccessMessage"] != null)
-            {
-            <div class="mt-2 bg-teal-100 border border-teal-200 text-sm text-teal-800 rounded-lg p-4 dark:bg-teal-800/10 dark:border-teal-900 dark:text-teal-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-success-label">
-                @ViewData["SuccessMessage"]
-            </div>
-            }
-
-            @if (ViewData["ErrorMessage"] != null)
-            {
-            <div class="mt-2 bg-red-100 border border-red-200 text-sm text-red-800 rounded-lg p-4 dark:bg-red-800/10 dark:border-red-900 dark:text-red-500" role="alert" tabindex="-1" aria-labelledby="hs-soft-color-danger-label">
-                @ViewData["ErrorMessage"]
-            </div>
-            }
-        </div>
-    }
-}
-
 @section GridLeftContent
 {
     <div>
@@ -108,9 +86,71 @@
         <input type="hidden" asp-for="Coordinate.Longitude" />
 
         <div>
-            @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_LocationButton.cshtml")
-            @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_FormFields.cshtml")
-            @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_OpeningHours.cshtml")
+            <div class="mb-6 border border-blue-500 p-4 rounded-lg">
+                <div class="flex justify-between items-center">
+                    <div>
+                        <label class="text-sm font-medium text-gray-700 block mb-1 dark:text-gray-200">Locatie</label>
+                        <p class="text-xs text-gray-500 dark:text-gray-400">*Click on the map to add a location</p>
+                        <span asp-validation-for="Coordinate" class="text-red-500 mb-4"></span>
+                    </div>
+                    <button type="button"
+                            class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-200"
+                            id="applyLocationButton">
+                        + Add location
+                    </button>
+                </div>
+            </div>
+            
+            <div class="mt-1 p-4 relative z-10 bg-white border border-gray-200 rounded-xl sm:mt-4 dark:bg-neutral-900 dark:border-neutral-700">
+                @Html.EditorFor(m => m.Title, new ViewDataDictionary(ViewData) {
+                    { "Placeholder", "Enter Title..." },
+                    { "Label", "Title" }
+                })
+
+                @Html.EditorFor(m => m.Category, "Dropdown", new ViewDataDictionary(ViewData) {
+                    { "Options", Model.Categories?.Select(c => c.CategoryName) },
+                    { "Label", "Category" }
+                })
+
+                @Html.EditorFor(m => m.Description, new ViewDataDictionary(ViewData) {
+                    { "Placeholder", "Enter Description..." },
+                    { "Label", "Description" },
+                    { "IsMultiline", true }
+                })
+
+                @Html.EditorFor(m => m.IsWheelchairAccessible, new ViewDataDictionary(ViewData) {
+                    { "Label", "Wheelchair Accessible" }
+                })
+            </div>
+            
+            <div class="mt-1 p-4 relative z-10 bg-white border border-gray-200 rounded-xl sm:mt-4 dark:bg-neutral-900 dark:border-neutral-700">
+                <div>
+                    <label class="block mb-2 text-sm font-medium dark:text-white">
+                        Opening Hours
+                    </label>
+
+                    <div class="space-y-3">
+                        @for (int i = 0; i < 7; i++)
+                        {
+                            var dayName = System.Globalization.CultureInfo.CurrentCulture.DateTimeFormat.GetDayName((DayOfWeek)i);
+                   
+                            <div class="flex items-center gap-4">
+                                @Html.EditorFor(m => m.OpeningHours[i].IsActive, new ViewDataDictionary(ViewData) {
+                                { "Label", @dayName }
+                                })
+                                
+                                @Html.EditorFor(m => m.OpeningHours[i].Start, "Time", new ViewDataDictionary(ViewData) {
+                                { "Label", "" }
+                                })
+                                <span class="text-sm text-gray-500">to</span>
+                                @Html.EditorFor(m => m.OpeningHours[i].End, "Time", new ViewDataDictionary(ViewData) {
+                                { "Label", "" }
+                                })
+                            </div>
+                        }
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="mt-2 py-4 relative z-10">
