--- a/LiveMapDashboard.Web/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/CategoryList/Default.cshtml
@@ -1,4 +1,6 @@
-﻿@model LiveMapDashboard.Web.Models.Category.CategoryListViewModel
+﻿@using LiveMapDashboard.Web.Models.Modal
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model LiveMapDashboard.Web.Models.Category.CategoryListViewModel
 
 @{
     Layout = "~/Views/Shared/Layouts/_DefaultLayout.cshtml";
@@ -46,7 +48,7 @@
                                     Edit
                                 </a>
 
-                                <button type="button" class="inline-flex items-center gap-x-2 pl-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 focus:outline-hidden focus:text-red-800 disabled:opacity-50 disabled:pointer-events-none dark:text-red-500 dark:hover:text-red-400 dark:focus:text-red-400" aria-haspopup="dialog" aria-expanded="false" aria-controls="delete-alert-@category.CategoryName" data-hs-overlay="#delete-alert-@category.CategoryName">
+                                <button type="button" class="inline-flex items-center gap-x-2 pl-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 focus:outline-hidden focus:text-red-800 disabled:opacity-50 disabled:pointer-events-none dark:text-red-500 dark:hover:text-red-400 dark:focus:text-red-400" aria-haspopup="dialog" aria-expanded="false" aria-controls="delete-category-@category.CategoryName.Replace(' ', '-').ToLower()" data-hs-overlay="#delete-category-@category.CategoryName.Replace(' ', '-').ToLower()">
                                     Delete
                                 </button>
                             </td>
